Manual test: update default config